Ignore User Settings

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 [Aa]ssets/Plugins/GameCreator/StatsExamples/
 [Aa]ssets/Ninjutsu Games/GameCreator Modules/PhotonExamples/
 [Aa]ssets/Ninjutsu Games/GameCreator Modules/PhotonMeleeExamples/
+[Uu]serSettings/
