Init resolve un-used photon related packages
Git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/[Uu]serSettings/
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
@@ -73,4 +74,6 @@ crashlytics-build.properties
 [Aa]ssets/Plugins/GameCreator/StatsExamples/
 [Aa]ssets/Ninjutsu Games/GameCreator Modules/PhotonExamples/
 [Aa]ssets/Ninjutsu Games/GameCreator Modules/PhotonMeleeExamples/
-[Uu]serSettings/
+[Aa]ssets/[Pp]hoton/[Pp]hotonUnityNetworking/[Dd]emos/
+[Aa]ssets/[Pp]hoton/[Pp]hotonChat/[Dd]emos/
+[Aa]ssets/[Pp]hoton/[Pp]hotonRealtime/[Dd]emos/
