ignore usert settings

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ crashlytics-build.properties
 [Aa]ssets/[Pp]hoton/[Pp]hotonUnityNetworking/[Dd]emos/
 [Aa]ssets/[Pp]hoton/[Pp]hotonChat/[Dd]emos/
 [Aa]ssets/[Pp]hoton/[Pp]hotonRealtime/[Dd]emos/
+UserSettings/
