--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 Assets/Prefabs/** filter=lfs diff=lfs merge=lfs -text
 Assets/PackagedPrefabs/** filter=lfs diff=lfs merge=lfs -text
 Assets/Audio/** filter=lfs diff=lfs merge=lfs -text
+UserSettings/  filter= diff=
+UserSettings/EditorUserSettings.asset filter= diff=
