Server IP Config file and list synchronization

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ crashlytics-build.properties
 [Aa]ssets/[Pp]hoton/[Pp]hotonChat/[Dd]emos/
 [Aa]ssets/[Pp]hoton/[Pp]hotonRealtime/[Dd]emos/
 UserSettings/
+Assets/IP Config.txt
+Assets/IP Config.txt.meta
