--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ crashlytics-build.properties
 UserSettings/
 Assets/IP Config.txt
 Assets/IP Config.txt.meta
+Assets/Settings/SampleSceneProfile.asset
