--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ UserSettings/
 Assets/IP Config.txt
 Assets/IP Config.txt.meta
 Assets/Settings/SampleSceneProfile.asset
+Assets/Settings/SampleSceneProfile.asset.meta
