Added VFX attachment

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Assets/IP Config.txt
 Assets/IP Config.txt.meta
 Assets/Settings/SampleSceneProfile.asset
 Assets/Settings/SampleSceneProfile.asset.meta
+ProjectSettings/EditorBuildSettings.asset
