Write logs to file

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ Assets/IP Config.txt.meta
 Assets/Settings/SampleSceneProfile.asset
 Assets/Settings/SampleSceneProfile.asset.meta
 ProjectSettings/EditorBuildSettings.asset
+Assets/ConsoleLog.txt
+Assets/ConsoleLog.txt.meta
