--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.coffee.ui-particle": "4.2.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.8.4",
     "com.unity.collab-proxy": "1.17.2",
@@ -8,7 +9,7 @@
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mathematics": "1.2.6",
-    "com.unity.netcode.gameobjects": "1.2.0",
+    "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "12.1.7",
@@ -49,8 +50,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.coffee.ui-particle": "4.2.1"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
