New Input System Example

--- a/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
+++ b/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
@@ -1,3 +1,17 @@
 {
-	"name": "Vi.Player"
+    "name": "Vi.Player",
+    "rootNamespace": "",
+    "references": [
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
