--- a/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
+++ b/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
