--- a/Assets/Production Scripts/Editor/Vi.Editor.asmdef
+++ b/Assets/Production Scripts/Editor/Vi.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Vi.Editor",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:02f66acb3aeeb89459a230814c613dc4"
+    ],
     "includePlatforms": [
         "Editor"
     ],
