Controls settings menu

--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:195d8f69ae6979b40ae890dfefbdeb40"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
