--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -5,7 +5,8 @@
         "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
         "GUID:1491147abca9d7d4bb7105af628b223e",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:195d8f69ae6979b40ae890dfefbdeb40"
+        "GUID:195d8f69ae6979b40ae890dfefbdeb40",
+        "GUID:02f66acb3aeeb89459a230814c613dc4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
