--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.0.7",
