--- a/Assets/Production Scripts/Core/Vi.Core.asmdef
+++ b/Assets/Production Scripts/Core/Vi.Core.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:1491147abca9d7d4bb7105af628b223e",
         "GUID:02f66acb3aeeb89459a230814c613dc4",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
