Action VFX Particle System

--- a/Assets/Production Scripts/Editor/Vi.Editor.asmdef
+++ b/Assets/Production Scripts/Editor/Vi.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Vi.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:02f66acb3aeeb89459a230814c613dc4"
+        "GUID:02f66acb3aeeb89459a230814c613dc4",
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
     ],
     "includePlatforms": [
         "Editor"
