--- a/Assets/Production Scripts/ArtificialIntelligence/Vi.ArtificialIntelligence.asmdef
+++ b/Assets/Production Scripts/ArtificialIntelligence/Vi.ArtificialIntelligence.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
-        "GUID:1491147abca9d7d4bb7105af628b223e"
+        "GUID:1491147abca9d7d4bb7105af628b223e",
+        "GUID:02f66acb3aeeb89459a230814c613dc4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
