--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-# [Aa]ssets/[Pp]ackagedPrefabs/
+[Aa]ssets/[Pp]ackagedPrefabs/
 [Aa]ssets/ExampleAssets/
 [Aa]ssets/TutorialInfo/
 [Aa]ssets/Plugins/GameCreator/MeleeExamples/
