--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-*.asset filter=lfs diff=lfs merge=lfs -text
-*.FBX filter=lfs diff=lfs merge=lfs -text
-Assets/Prefabs/** filter=lfs diff=lfs merge=lfs -text
-Assets/PackagedPrefabs/** filter=lfs diff=lfs merge=lfs -text
+# *.asset filter=lfs diff=lfs merge=lfs -text
+# *.FBX filter=lfs diff=lfs merge=lfs -text
+# Assets/Prefabs/** filter=lfs diff=lfs merge=lfs -text
+# Assets/PackagedPrefabs/** filter=lfs diff=lfs merge=lfs -text
 Assets/Audio/** filter=lfs diff=lfs merge=lfs -text
 UserSettings/  filter= diff=
 UserSettings/EditorUserSettings.asset filter= diff=
