--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -7,7 +7,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:195d8f69ae6979b40ae890dfefbdeb40",
         "GUID:02f66acb3aeeb89459a230814c613dc4",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
