--- a/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
+++ b/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
@@ -6,7 +6,8 @@
         "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
         "GUID:1491147abca9d7d4bb7105af628b223e",
         "GUID:02f66acb3aeeb89459a230814c613dc4",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:2c360f3794ebc41388fc11424ddbfdd0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
