--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ ProjectSettings/EditorBuildSettings.asset
 Assets/ConsoleLog.txt
 Assets/ConsoleLog.txt.meta
 Assets/PackagedPrefabs/
+Assets/Samples/
+
