--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,17 @@ ProjectSettings/EditorBuildSettings.asset
 Assets/ConsoleLog.txt
 Assets/ConsoleLog.txt.meta
 Assets/PackagedPrefabs/
-Assets/Samples/
+[Aa]ssets/[Ss]amples/
 
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Interpolate Fade Attribute.vfxblock
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Orient - Smart Fixed Axis.vfxblock
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Orient - VR Camera Facing.vfxblock
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Set Color and Alpha.vfxblock
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Set stripProgress Attribute.vfxblock
+
+Assets/Samples/Visual Effect Graph/12.1.7/VisualEffectGraph Additions/Subgraphs/Blocks/Vortex.vfxblock
