--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.coffee.ui-particle": "4.2.1",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.addressables": "1.19.19",
     "com.unity.animation.rigging": "1.1.1",
     "com.unity.burst": "1.8.11",
     "com.unity.collab-proxy": "2.2.0",
