--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -8,7 +8,9 @@
         "GUID:195d8f69ae6979b40ae890dfefbdeb40",
         "GUID:02f66acb3aeeb89459a230814c613dc4",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
