--- a/Assets/Production Scripts/Editor/Vi.Editor.asmdef
+++ b/Assets/Production Scripts/Editor/Vi.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:02f66acb3aeeb89459a230814c613dc4",
-        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [
         "Editor"
