--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -11,14 +11,16 @@
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:15fc0a57446b3144c949da3e2b9737a9"
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:b8e04f539b7fff64f915cd3120f8eef6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Firebase.Auth.dll"
+        "Firebase.Auth.dll",
+        "DOTween.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
