--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ Assets/Audio/** filter=lfs diff=lfs merge=lfs -text
 UserSettings/  filter= diff=
 UserSettings/EditorUserSettings.asset filter= diff=
 *.bundle filter=lfs diff=lfs merge=lfs -text
+Assets/Scenes/Arena Map A/LightingData.asset filter=lfs diff=lfs merge=lfs -text
