--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ UserSettings/  filter= diff=
 UserSettings/EditorUserSettings.asset filter= diff=
 *.bundle filter=lfs diff=lfs merge=lfs -text
 LightingData.* filter=lfs diff=lfs merge=lfs -text
+LightingData filter=lfs diff=lfs merge=lfs -text
