--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -18,7 +18,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Firebase.Auth.dll"
+        "Firebase.Auth.dll",
+        "Newtonsoft.Json.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
