--- a/Assets/Production Scripts/UI/Vi.UI.asmdef
+++ b/Assets/Production Scripts/UI/Vi.UI.asmdef
@@ -11,7 +11,8 @@
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:15fc0a57446b3144c949da3e2b9737a9"
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:9a085deab3ab5114cbe7ebc79a3fe32b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
