--- a/Assets/Production Scripts/Utility/Vi.Utility.asmdef
+++ b/Assets/Production Scripts/Utility/Vi.Utility.asmdef
@@ -1,3 +1,17 @@
 {
-	"name": "Vi.Utility"
+    "name": "Vi.Utility",
+    "rootNamespace": "",
+    "references": [
+        "GUID:1491147abca9d7d4bb7105af628b223e",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
