black holeeeeeee prework

--- a/Assets/Production Scripts/Misc/Vi.Misc.asmdef
+++ b/Assets/Production Scripts/Misc/Vi.Misc.asmdef
@@ -2,7 +2,9 @@
     "name": "Vi.Misc",
     "rootNamespace": "",
     "references": [
-        "GUID:7f7d1af65c2641843945d409d28f2e20"
+        "GUID:7f7d1af65c2641843945d409d28f2e20",
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
