--- a/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
+++ b/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Vi.PlatformAPI",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
