--- a/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
+++ b/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
@@ -2,7 +2,9 @@
     "name": "Vi.PlatformAPI",
     "rootNamespace": "",
     "references": [
-        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e"
+        "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
+        "GUID:68bd7fdb68ef2684e982e8a9825b18a5",
+        "GUID:be281b7992e9e1840851a78ba9db107c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
