Minor namespace rename as it redesign to be useable on other projects

--- a/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
+++ b/Assets/Production Scripts/Core/PlatformAPI/PlatformAPI.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Vi.PlatformAPI",
+    "name": "jomarcentermjm.PlatformAPI",
     "rootNamespace": "",
     "references": [
         "GUID:cba3e4bdb3a58804f8dcb85b85b31b7e",
