fix smr not enabling for certain equipment properly on start

--- a/Assets/Production Scripts/ScriptableObjects/Vi.ScriptableObjects.asmdef
+++ b/Assets/Production Scripts/ScriptableObjects/Vi.ScriptableObjects.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:1491147abca9d7d4bb7105af628b223e",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
-        "GUID:9a085deab3ab5114cbe7ebc79a3fe32b"
+        "GUID:9a085deab3ab5114cbe7ebc79a3fe32b",
+        "GUID:406190ab8ee569c46bc05a890e5127a0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
