--- a/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
+++ b/Assets/Production Scripts/Core/Player/Vi.Player.asmdef
@@ -8,7 +8,8 @@
         "GUID:02f66acb3aeeb89459a230814c613dc4",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:2c360f3794ebc41388fc11424ddbfdd0",
-        "GUID:9a085deab3ab5114cbe7ebc79a3fe32b"
+        "GUID:9a085deab3ab5114cbe7ebc79a3fe32b",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
