fix build errors

--- a/Assets/Plugins/PlatformAPI/PlatformAPI.asmdef
+++ b/Assets/Plugins/PlatformAPI/PlatformAPI.asmdef
@@ -7,7 +7,16 @@
         "GUID:be281b7992e9e1840851a78ba9db107c",
         "GUID:d81d39f232dd17343abb13c390889046"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "LinuxStandalone64",
+        "CloudRendering",
+        "macOSStandalone",
+        "WSA",
+        "WindowsStandalone32",
+        "WindowsStandalone64"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
